--- a/MudBlazorPR/Components/Pages/Products.razor
+++ b/MudBlazorPR/Components/Pages/Products.razor
@@ -10,13 +10,13 @@
 
 <div class="mb-4 d-flex gap-2">
     <MudTextField @bind-Value="_searchQuery"
-                  Placeholder="Search by name, phone, etc..."
+                  Placeholder="GetUserBySearch by name, phone, etc..."
                   Adornment="Adornment.Start"
                   AdornmentIcon="@Icons.Material.Filled.Search"
                   Immediate="true"
                   OnKeyDown="HandleKeyDown"
                   Margin="Margin.Dense"/>
-    <MudButton OnClick="SearchProduct" Color="Color.Primary" Variant="Variant.Filled">Search</MudButton>
+    <MudButton OnClick="SearchProduct" Color="Color.Primary" Variant="Variant.Filled">GetUserBySearch</MudButton>
 </div>
 
 @if (_isLoading)
@@ -171,14 +171,14 @@ else
         try
         {
             var url = $"http://localhost:5191/Product/Search?Text={Uri.EscapeDataString(_searchQuery)}";
-            _productPage = await Http.GetFromJsonAsync<PageData<Product>>(url) ?? new PageData<Product>();
+            _productPage.Items = await Http.GetFromJsonAsync<IEnumerable<Product>>(url) ?? [];
 
             _totalPages = 1;
             _currentPage = 1;
         }
         catch (Exception ex)
         {
-            Console.WriteLine("Search error: " + ex.Message);
+            Console.WriteLine("GetUserBySearch error: " + ex.Message);
             _productPage.Items = [];
         }
 
