--- a/Stocky.Client/Components/Pages/UserPage.razor
+++ b/Stocky.Client/Components/Pages/UserPage.razor
@@ -1,8 +1,14 @@
 ﻿@page "/users"
 @inject HttpClient Http
 @inject IDialogService DialogService
+@inject AuthService AuthService
+@using System.Net.Http.Headers
+@using System.Text.Json
+@using Microsoft.AspNetCore.Authorization
 @using MudBlazor.Components.DialogWindows.UserDialogs
+@using MudBlazor.Components.Service
 @using ReferenceClass.Models
+@attribute [Authorize]
 
 <PageTitle>UserPage</PageTitle>
 
@@ -92,21 +98,38 @@ else
         try
         {
             var url = $"http://localhost:5191/User/UserPagination?Page={_currentPage}&PageSize={PageSize}";
-            _userPage = await Http.GetFromJsonAsync<PageData<User>>(url);
+            var request = new HttpRequestMessage(HttpMethod.Get, url);
 
-            if (_userPage?.Items != null)
+            request.Headers.Authorization = new AuthenticationHeaderValue("Bearer", AuthService.Token);
+
+            var response = await Http.SendAsync(request);
+            if (response.IsSuccessStatusCode)
             {
-                _totalPages = (int)Math.Ceiling((double)_userPage.TotalCount / PageSize);
+                var json = await response.Content.ReadAsStringAsync();
+
+                _userPage = JsonSerializer.Deserialize<PageData<User>>(json, new JsonSerializerOptions
+                {
+                    PropertyNameCaseInsensitive = true
+                });
+
+                _totalPages = (int)Math.Ceiling((double)(_userPage?.TotalCount ?? 0) / PageSize);
             }
             else
             {
-                _userPage.Items = [];
+                if (_userPage != null)
+                {
+                    _userPage.Items = [];
+                }
             }
         }
         catch (Exception ex)
         {
             Console.WriteLine("Error loading users: " + ex.Message);
-            _userPage.Items = [];
+
+            if (_userPage != null)
+            {
+                _userPage.Items = [];
+            }
         }
 
         _isLoading = false;
@@ -225,8 +248,21 @@ else
         _isLoading = true;
         try
         {
-            string url = $"http://localhost:5191/User/GetUserBySearch?Text={Uri.EscapeDataString(_searchQuery)}";
-            _userPage.Items = await Http.GetFromJsonAsync<IEnumerable<User>>(url) ?? [];
+            var url = $"http://localhost:5191/User/Search?Text={Uri.EscapeDataString(_searchQuery)}";
+            var request = new HttpRequestMessage(HttpMethod.Get, url);
+            
+            request.Headers.Authorization = new AuthenticationHeaderValue("Bearer", AuthService.Token);
+            
+            var response = await Http.SendAsync(request);
+            if (response.IsSuccessStatusCode)
+            {
+                var json = await response.Content.ReadAsStringAsync();
+
+                _userPage.Items = JsonSerializer.Deserialize<List<User>>(json, new JsonSerializerOptions
+                {
+                    PropertyNameCaseInsensitive = true
+                });
+            }
 
             _totalPages = 1;
             _currentPage = 1;
@@ -234,7 +270,11 @@ else
         catch (Exception ex)
         {
             Console.WriteLine("GetUserBySearch error: " + ex.Message);
-            _userPage.Items = [];
+
+            if (_userPage != null)
+            {
+                _userPage.Items = [];
+            }
         }
 
         _isLoading = false;
