--- a/Stocky.Client/Components/Pages/Products.razor
+++ b/Stocky.Client/Components/Pages/Products.razor
@@ -1,8 +1,10 @@
 @page "/products"
 @inject HttpClient Http
 @inject IDialogService DialogService
+@using Microsoft.AspNetCore.Authorization
 @using MudBlazor.Components.DialogWindows.ProductDialogs
 @using ReferenceClass.Models
+@attribute [Authorize]
 
 <PageTitle>Products</PageTitle>
 
